Fix #36719: UV pass not rendering in second render layer if first render layer does not have the UV pass enabled as well.