intern/cycles/render/film.cpp
@@ -431,8 +431,12 @@ bool Film::modified(const Film& film)
 
 void Film::tag_passes_update(Scene *scene, const vector<Pass>& passes_)
 {
-	if(Pass::contains(passes, PASS_UV) != Pass::contains(passes_, PASS_UV))
+	if(Pass::contains(passes, PASS_UV) != Pass::contains(passes_, PASS_UV)) {
 		scene->mesh_manager->tag_update(scene);
+
+		foreach(Shader *shader, scene->shaders)
+			shader->need_update_attributes = true;
+	}
 	else if(Pass::contains(passes, PASS_MOTION) != Pass::contains(passes_, PASS_MOTION))
 		scene->mesh_manager->tag_update(scene);
 
